--- a/www/html/index.html
+++ b/www/html/index.html
@@ -87,5 +87,8 @@
             © 2017 蓝鲸素材 · 开源技术支持 · Node.JS · MongoDB · Express · Socket.io · 开发 · XiviStudios · PANDA
         </div>
     </div>
+    <!-- 验证码 -->
+    <div class="code">
+    </div>
     </body>
 </html>
